[core,cmake,build] Define ROOT version in header:
This simplifies the release procedure: no more bootstrapping, no more
running of scripts; the source is the source.

Given that the source now has the authoritative version number for
releases (unlike for dev branches, of course) the ROOT package version
is now determined from that header, rather than git describe which is
less reliable.

The updated release procedure will appear at https://root.cern/for_developers/release_checklist/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,26 +86,34 @@ else()
 endif()
 
 function(SET_VERSION_FROM_FILE)
-  file(READ ${CMAKE_SOURCE_DIR}/build/version_number versionstr)
-  string(STRIP ${versionstr} versionstr)
-  string(REGEX REPLACE "([0-9]+)[.][0-9]+[/][0-9]+" "\\1" ROOT_MAJOR_VERSION ${versionstr})
-  string(REGEX REPLACE "[0-9]+[.]([0-9]+)[/][0-9]+" "\\1" ROOT_MINOR_VERSION ${versionstr})
-  string(REGEX REPLACE "[0-9]+[.][0-9]+[/]([0-9]+)" "\\1" ROOT_PATCH_VERSION ${versionstr})
-  set(ROOT_VERSION "${ROOT_MAJOR_VERSION}.${ROOT_MINOR_VERSION}.${ROOT_PATCH_VERSION}" PARENT_SCOPE)
+  # See https://stackoverflow.com/questions/47066115/cmake-get-version-from-multiline-text-file
+  file(READ "${CMAKE_SOURCE_DIR}/core/foundation/inc/ROOT/RVersion.hxx" versionstr)
+  string(REGEX MATCH "#define ROOT_VERSION_MAJOR ([0-9]*)" _ ${versionstr})
+  set(ROOT_MAJOR_VERSION ${CMAKE_MATCH_1})
+  string(REGEX MATCH "#define ROOT_VERSION_MINOR ([0-9]*)" _ ${versionstr})
+  set(ROOT_MINOR_VERSION ${CMAKE_MATCH_1})
+  string(REGEX MATCH "#define ROOT_VERSION_PATCH ([0-9]*)" _ ${versionstr})
+  set(ROOT_PATCH_VERSION ${CMAKE_MATCH_1})
+
   set(ROOT_MAJOR_VERSION "${ROOT_MAJOR_VERSION}" PARENT_SCOPE)
   set(ROOT_MINOR_VERSION "${ROOT_MINOR_VERSION}" PARENT_SCOPE)
   set(ROOT_PATCH_VERSION "${ROOT_PATCH_VERSION}" PARENT_SCOPE)
 endfunction()
 
-if(GIT_DESCRIBE_ERRCODE)
-  SET_VERSION_FROM_FILE()
-else()
+SET_VERSION_FROM_FILE()
+
+set(ROOT_VERSION "${ROOT_MAJOR_VERSION}.${ROOT_MINOR_VERSION}.${ROOT_PATCH_VERSION}")
+set(ROOT_FULL_VERSION "${ROOT_VERSION}")
+
+math(EXPR ROOT_PATCH_VERSION_ODD ${ROOT_PATCH_VERSION}%2)
+# For release versions (even patch version number) we use the number from
+# core/foundation/inc/ROOT/RVersion.hxx, not that of git: it's more stable / reliable.
+if(NOT GIT_DESCRIBE_ERRCODE AND ${ROOT_PATCH_VERSION_ODD} EQUAL 1)
   execute_process(COMMAND ${GIT_EXECUTABLE} --git-dir=${CMAKE_SOURCE_DIR}/.git describe --always
                   OUTPUT_VARIABLE GIT_DESCRIBE_ALWAYS
                   ERROR_QUIET
                   OUTPUT_STRIP_TRAILING_WHITESPACE)
   string(TIMESTAMP GIT_TIMESTAMP "%b %d %Y, %H:%M:%S" UTC)
-  string(REGEX REPLACE "^v([0-9]+)-([0-9]+)-(.*)" "\\1.\\2.\\3" ROOT_FULL_VERSION ${GIT_DESCRIBE_ALWAYS})
 
   if("${GIT_DESCRIBE_ALL}" MATCHES "^tags/v[0-9]+-[0-9]+-[0-9]+.*")
     # GIT_DESCRIBE_ALWAYS: v6-16-00-rc1
@@ -114,6 +122,7 @@ else()
     string(REGEX REPLACE "^tags/v([0-9]+)-.*" "\\1" ROOT_MAJOR_VERSION ${GIT_DESCRIBE_ALL})
     string(REGEX REPLACE "^tags/v[0-9]+-([0-9]+).*" "\\1" ROOT_MINOR_VERSION ${GIT_DESCRIBE_ALL})
     string(REGEX REPLACE "^tags/v[0-9]+-[0-9]+-([0-9]+).*" "\\1" ROOT_PATCH_VERSION ${GIT_DESCRIBE_ALL})
+    string(REGEX REPLACE "^v([0-9]+)-([0-9]+)-(.*)" "\\1.\\2.\\3" ROOT_FULL_VERSION ${GIT_DESCRIBE_ALWAYS})
   elseif("${GIT_DESCRIBE_ALL}" MATCHES "/v[0-9]+-[0-9]+.*-patches$")
     # GIT_DESCRIBE_ALWAYS: v6-16-00-rc1-47-g9ba56ef4a3
     # GIT_DESCRIBE_ALL: heads/v6-16-00-patches
@@ -123,12 +132,12 @@ else()
   else()
     # GIT_DESCRIBE_ALWAYS: v6-13-04-2163-g7e8d27ea66
     # GIT_DESCRIBE_ALL: heads/master or remotes/origin/master
-    SET_VERSION_FROM_FILE()
-    set(ROOT_FULL_VERSION "${ROOT_MAJOR_VERSION}.${ROOT_MINOR_VERSION}.${ROOT_PATCH_VERSION}")
+
+    # Use what was set above in SET_VERSION_FROM_FILE().
   endif()
-  set(ROOT_VERSION "${ROOT_MAJOR_VERSION}.${ROOT_MINOR_VERSION}.${ROOT_PATCH_VERSION}")
-  message(STATUS "Detected ROOT_VERSION ${ROOT_VERSION}")
 endif()
+
+message(STATUS "Building ROOT version ${ROOT_FULL_VERSION}")
 
 #---Try to download a file to check internet connection-----------------------------------------
 message(STATUS "Checking internet connectivity")
