--- a/config/root-config.bat.in
+++ b/config/root-config.bat.in
@@ -109,18 +109,7 @@ for %%w in (%*) do (
       set out=!out! !prefix!
    )
    if "!arg!"=="--version" (
-      rem Output the version number. If RVersion.h can not be found, give up.
-      if exist !incdir!\RVersion.h (
-         for /f "tokens=2,3" %%a in (!incdir!\RVersion.h) do (
-            if "%%a"=="ROOT_RELEASE" (
-               set ROOT_RELEASE=%%~b
-            )
-         )
-         set out=!out! !ROOT_RELEASE!
-      ) else (
-         echo "cannot read ${incdir}/RVersion.h"
-         exit /b 1
-      )
+      set out=!out! @ROOT_VERSION@
    )
    if "!arg!"=="--git-revision" (
       rem Output the git revision number. If RGitCommit.h can not be found, give up.
