[base,config,cmake,cppyy] Replace usage of gitinfo.txt by RGitCommit.h:
If the source dir is a git repo, `RGitCommit.h` remains authoritative and unchanged.

If the source dir is not a git repo, RGitCommit.h can be generated without `git` thanks to the data in RVersion.hxx:
- an even ROOT_PATCH_VERSION indicates that this is a tag.
- an odd ROOT_PATCH_VERSION indicates that this is a development version.

I.e. for all cases where a source tarball instead of a git repo, RGitCommit.h can be constructed during the build, and gitinfo.txt (which used to be generated during the build time, and needed to be generated / updated before `make distsrc` could be called) is not needed anymore.

Drop GIT_TIMESTAMP - the doc of `TROOT::GetGitTimestamp()` always said "build time", not "commit time",
i.e. this is actually a bug fix :-)'

Mention this change and the prior removal of `build/version_number` in the release notes.

--- a/config/root-config.in
+++ b/config/root-config.in
@@ -556,13 +556,7 @@ while test $# -gt 0; do
       out="$out @ROOT_VERSION@"
       ;;
     --git-revision)
-      ### Output the git revision number.  If RGitCommit.h can not be found, give up.
-      if test -r "${incdir}/RGitCommit.h"; then
-         out="$out `sed -n 's,.*ROOT_GIT_COMMIT *\"\(.*\)\".*,\1,p' < \"${incdir}/RGitCommit.h\"`"
-      else
-         echo "cannot read ${incdir}/RGitCommit.h"
-         exit 1
-      fi
+      out="$out @ROOT_GIT_COMMIT@"
       ;;
     --python-version)
       out="$out @pythonvers@"
