--- a/config/root-config.bat.in
+++ b/config/root-config.bat.in
@@ -112,18 +112,7 @@ for %%w in (%*) do (
       set out=!out! @ROOT_VERSION@
    )
    if "!arg!"=="--git-revision" (
-      rem Output the git revision number. If RGitCommit.h can not be found, give up.
-      if exist !incdir!\RGitCommit.h (
-         for /f "tokens=2,3" %%a in (!incdir!\RGitCommit.h) do (
-            if "%%a"=="ROOT_GIT_COMMIT" (
-               set ROOT_GIT_COMMIT=%%~b
-            )
-         )
-         set out=!out! !ROOT_GIT_COMMIT!
-      ) else (
-         echo "cannot read !incdir!\RGitCommit.h"
-         exit /b 1
-      )
+      set out=!out! @ROOT_GIT_COMMIT@
    )
    if "!arg!"=="--python-version" (
       set out=!out! @pythonvers@
