[tmva][sofie] Add in RSofieReader specialization for single output

--- a/tmva/pymva/test/CMakeLists.txt
+++ b/tmva/pymva/test/CMakeLists.txt
@@ -132,6 +132,7 @@ if((PY_KERAS_FOUND AND PY_THEANO_FOUND) OR (PY_KERAS_FOUND AND PY_TENSORFLOW_FOU
    ROOT_ADD_GTEST(TestRModelParserKeras TestRModelParserKeras.C
     LIBRARIES
     ROOTTMVASofie
+    PyMVA
     blas
     ${PYTHON_LIBRARIES}
     INCLUDE_DIRS
