[pyroot] Add dependency on dataframe for rtensor test.
This should fix some of the failures observed for builds without rdataframe

--- a/bindings/pyroot/pythonizations/test/CMakeLists.txt
+++ b/bindings/pyroot/pythonizations/test/CMakeLists.txt
@@ -137,7 +137,7 @@ if (tmva)
 endif()
 
 # RTensor pythonizations
-if (tmva)
+if (tmva AND dataframe)
     if(NOT MSVC OR CMAKE_SIZEOF_VOID_P EQUAL 4 OR win_broken_tests)
         ROOT_ADD_PYUNITTEST(pyroot_pyz_rtensor rtensor.py PYTHON_DEPS numpy)
     endif()
