--- a/config/RConfigure.in
+++ b/config/RConfigure.in
@@ -62,6 +62,7 @@
 #@use_less_includes@ R__LESS_INCLUDES /**/
 #@hastbb@ R__HAS_TBB /**/
 #@hasroofit_multiprocess@ R__HAS_ROOFIT_MULTIPROCESS /**/
+#@hasminuit2@ R__HAS_MINUIT2 /**/
 
 #if defined(R__HAS_VECCORE) && defined(R__HAS_VC)
 #ifndef VECCORE_ENABLE_VC
