--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -32,6 +32,10 @@ on:
       incremental:
         type: boolean
         required: true
+        default: false
+      binaries:
+        type: boolean
+        required: true
         default: true
 
   # Enables manual start of workflow
@@ -52,6 +56,10 @@ on:
         type: boolean
         required: true
         default: true
+      binaries:
+        type: boolean
+        required: true
+        default: false
 
 env:
   PYTHONUNBUFFERED: true
@@ -111,6 +119,7 @@ jobs:
                     --incremental    ${{ inputs.incremental }}
                     --base_ref       ${{ inputs.base_ref }}
                     --head_ref       ${{ inputs.head_ref }}
+                    --binaries       ${{ inputs.binaries }}
                     --repository     ${{ github.server_url }}/${{ github.repository }}"
 
       - name: Nightly build
@@ -120,6 +129,7 @@ jobs:
                     --platform       ${{ matrix.platform }}
                     --incremental    false
                     --base_ref       ${{ github.ref_name }}
+                    --binaries       true
                     --repository     ${{ github.server_url }}/${{ github.repository }}"
 
       - name: Update artifacts after push to release branch
@@ -129,14 +139,30 @@ jobs:
                     --platform       ${{ matrix.platform }}
                     --incremental    false
                     --base_ref       ${{ github.ref_name }}
+                    --binaries       ${{ startsWith(github.ref, 'refs/tags/') }}
                     --repository     ${{ github.server_url }}/${{ github.repository }}"
 
       - name: Upload test results
         if:   ${{ !cancelled() }}
         uses: actions/upload-artifact@v3
         with:
-          name:  Test Results ${{ matrix.platform }} ${{ matrix.arch }} ${{ matrix.config }}
+          name: Test Results ${{ matrix.platform }} ${{ matrix.arch }} ${{ matrix.config }}
           path: /Users/sftnight/ROOT-CI/build/TestResults.xml
+
+      - name: Upload build artifacts
+        if:   ${{ !cancelled() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Test Results ${{ matrix.platform }} ${{ matrix.arch }} ${{ matrix.config }}
+          path: /Users/sftnight/ROOT-CI/build/TestResults.xml
+
+      - name: Upload binaries
+        if:   ${{ !cancelled() && (inputs.binaries || github.event_name == 'schedule' || startsWith(github.ref, 'refs/tags/')) }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Binaries ${{ matrix.platform }} ${{ matrix.arch }} ${{ matrix.config }}
+          path: /Users/sftnight/ROOT-CI/root_v*
+          if-no-files-found: error
 
 
   build-windows:
@@ -232,8 +258,16 @@ jobs:
         if:   ${{ !cancelled() }}
         uses: actions/upload-artifact@v3
         with:
-          name:  Test Results Windows ${{ matrix.target_arch }} ${{ matrix.config }}
+          name: Test Results Windows ${{ matrix.target_arch }} ${{ matrix.config }}
           path: C:/ROOT-CI/build/TestResults.xml
+
+      - name: Upload binaries
+        if:   ${{ !cancelled() && (inputs.binaries || github.event_name == 'schedule' || startsWith(github.ref, 'refs/tags/')) }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Binaries ${{ matrix.target_arch }} ${{ matrix.config }}
+          path: C:/ROOT-CI/root_v*
+          if-no-files-found: error
 
 
   build-linux:
@@ -393,8 +427,16 @@ jobs:
         if:   ${{ !cancelled() }}
         uses: actions/upload-artifact@v3
         with:
-          name:  Test Results ${{ matrix.image }} ${{ matrix.config }}
+          name: Test Results ${{ matrix.image }} ${{ matrix.config }}
           path: /github/home/ROOT-CI/build/TestResults.xml
+
+      - name: Upload binaries
+        if:   ${{ !cancelled() && (inputs.binaries || github.event_name == 'schedule' || startsWith(github.ref, 'refs/tags/')) }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Binaries ${{ matrix.image }} ${{ matrix.config }}
+          path: /github/home/ROOT-CI/ROOT-CI/root_v*
+          if-no-files-found: error
 
   event_file:
     if: github.repository_owner == 'root-project' || github.event_name == 'pull_request'
