[cmake] Make unfold optional so it can be disabled:
It is GPL licensed and ROOT binaries must not have it enabled.

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -165,8 +165,11 @@ endif()
 
 if(NOT ROOT_xml_FOUND)
   set(xml_veto  xml/*.C
-                histfactory/*.C    # histfactory requires xml
-                unfold/*.C)        # unfold requires xml
+                histfactory/*.C)   # histfactory requires xml
+endif()
+
+if(NOT ROOT_unfold_FOUND)
+  set(xml_veto  unfold/*.C)
 endif()
 
 if(NOT ROOT_mpi_FOUND)
