--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,7 +59,7 @@ if(MSVC)
     add_custom_command(TARGET Event POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/Event.pcm
                                      ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/Event.pcm)
-  endif()                                                           
+  endif()
 endif()
 ROOT_EXECUTABLE(eventexe MainEvent.cxx LIBRARIES Event RIO Tree TreePlayer Hist Net)
 ROOT_ADD_TEST(test-event COMMAND eventexe)
@@ -246,7 +246,7 @@ if(ROOT_roofit_FOUND)
     ROOT_EXECUTABLE(stressRooFit stressRooFit.cxx LIBRARIES RooFit RooFitMore)
   else()
     ROOT_EXECUTABLE(stressRooFit stressRooFit.cxx LIBRARIES RooFit )
-  endif()  
+  endif()
   configure_file(stressRooFit_ref.root stressRooFit_ref.root COPYONLY)
   ROOT_ADD_TEST(test-stressroofit COMMAND stressRooFit -b off FAILREGEX "FAILED|Error in")
   ROOT_ADD_TEST(test-stressroofit-batchmode-cpu COMMAND stressRooFit -b cpu FAILREGEX "FAILED|Error in")
@@ -279,17 +279,21 @@ if(ROOT_roofit_FOUND)
   if (ROOT_minuit2_FOUND)
     ROOT_ADD_TEST(test-stressroostats-minuit2 COMMAND stressRooStats -minim Minuit2  FAILREGEX "FAILED|Error in" LABELS longtest)
   endif()
-endif()
 
-#--stressHistFactory--------------------------------------------------------------------------------
-if(ROOT_roofit_FOUND AND GSL_FOUND AND ROOT_xml_FOUND)
-  ROOT_EXECUTABLE(stressHistFactory stressHistFactory.cxx LIBRARIES RooStats HistFactory XMLParser)
-  if(NOT MSVC)
-    configure_file(HistFactoryTest.tar HistFactoryTest.tar COPYONLY)
-    configure_file(stressHistFactory_ref.root stressHistFactory_ref.root COPYONLY)
-    ROOT_ADD_TEST(test-stressHistFactory ENVIRONMENT ROOTSYS=${CMAKE_BINARY_DIR} COMMAND stressHistFactory FAILREGEX "FAILED|Error in" LABELS longtest)
-    ROOT_ADD_TEST(test-stressHistFactory-interpreted COMMAND ${ROOT_root_CMD} -b -q -l ${CMAKE_CURRENT_SOURCE_DIR}/stressHistFactory.cxx FAILREGEX "FAILED|Error in" DEPENDS test-stressHistFactory)
+  #--stressHistFactory--------------------------------------------------------------------------------
+  if(GSL_FOUND AND ROOT_xml_FOUND)
+    ROOT_EXECUTABLE(stressHistFactory stressHistFactory.cxx LIBRARIES RooStats HistFactory XMLParser)
+    if(NOT MSVC)
+      configure_file(HistFactoryTest.tar HistFactoryTest.tar COPYONLY)
+      configure_file(stressHistFactory_ref.root stressHistFactory_ref.root COPYONLY)
+      ROOT_ADD_TEST(test-stressHistFactory ENVIRONMENT ROOTSYS=${CMAKE_BINARY_DIR} COMMAND stressHistFactory FAILREGEX "FAILED|Error in" LABELS longtest)
+      if (ROOT_minuit2_FOUND)
+        ROOT_ADD_TEST(test-stressHistFactory-minuit2 ENVIRONMENT ROOTSYS=${CMAKE_BINARY_DIR} COMMAND stressHistFactory -minim Minui2 FAILREGEX "FAILED|Error in" LABELS longtest)
+      endif()
+      ROOT_ADD_TEST(test-stressHistFactory-interpreted COMMAND ${ROOT_root_CMD} -b -q -l ${CMAKE_CURRENT_SOURCE_DIR}/stressHistFactory.cxx FAILREGEX "FAILED|Error in" DEPENDS test-stressHistFactory)
+    endif()
   endif()
+
 endif()
 
 #--stressFit---------------------------------------------------------------------------------
