[ntuple] add xxhash3 checksum handling to anchor
- Make xxhash a dependency of RNTuple
- Require at least version 0.8 of xxhash, to be able to use the xxhash3
  algorithm
- Adjust streamer code of ntuple anchor to set and verify the checksum

--- a/tree/ntuple/CMakeLists.txt
+++ b/tree/ntuple/CMakeLists.txt
@@ -76,6 +76,8 @@ DEPENDENCIES
   ROOTVecOps
 )
 
+target_link_libraries(ROOTNTuple PRIVATE xxHash::xxHash)
+
 # Enable RNTuple support for Intel DAOS
 if(daos OR daos_mock)
   set(ROOTNTuple_EXTRA_HEADERS ROOT/RPageStorageDaos.hxx)
