--- a/root/meta/CMakeLists.txt
+++ b/root/meta/CMakeLists.txt
@@ -44,6 +44,7 @@ ROOTTEST_COMPILE_MACRO(fornamespace.C)
 configure_file(templateAutoload.rootmap . COPYONLY)
 configure_file(typelist.v5.txt . COPYONLY)
 configure_file(typelist.v6.txt . COPYONLY)
+configure_file(typelist.v6.cxx17.txt . COPYONLY)
 configure_file(typelist_win32.v5.txt . COPYONLY)
 configure_file(typelist_win32.v6.txt . COPYONLY)
 configure_file(typelist_win32.v6.cxx17.txt . COPYONLY)
