[CMake] Eliminate duplicate linked libs

--- a/core/rootcling_stage1/CMakeLists.txt
+++ b/core/rootcling_stage1/CMakeLists.txt
@@ -17,7 +17,9 @@ else()
   endif()
 endif()
 
-if(NOT builtin_clang)
+if(builtin_clang)
+  set(CLING_LIBRARIES "clingMetaProcessor")
+else()
   list(APPEND CLING_LIBRARIES ${CLING_DEPEND_LIBS})
   link_directories("${LLVM_LIBRARY_DIR}")
 endif()
