[ci] Pass --binaries for all platforms; fix syntax of cpack invocation.

--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -128,8 +128,8 @@ jobs:
                     --buildtype      ${{ matrix.config }}
                     --platform       ${{ matrix.platform }}
                     --incremental    false
-                    --base_ref       ${{ github.ref_name }}
                     --binaries       true
+                    --base_ref       ${{ github.ref_name }}
                     --repository     ${{ github.server_url }}/${{ github.repository }}"
 
       - name: Update artifacts after push to release branch
@@ -238,6 +238,7 @@ jobs:
                     --buildtype    ${{ matrix.config }}
                     --platform     windows10
                     --incremental  false
+                    --binaries     true
                     --base_ref     ${{ github.ref_name }}
                     --repository   ${{ github.server_url }}/${{ github.repository }}
                     --architecture ${{ matrix.target_arch }}  "
@@ -409,6 +410,7 @@ jobs:
                     --buildtype      ${{ matrix.config }}
                     --platform       ${{ matrix.image }}
                     --incremental    false
+                    --binaries       true
                     --base_ref       ${{ github.ref_name }}
                     --repository     ${{ github.server_url }}/${{ github.repository }}
               "
