Do not run numba tests if disabled.

--- a/python/numba/CMakeLists.txt
+++ b/python/numba/CMakeLists.txt
@@ -1,8 +1,10 @@
 if(ROOT_pyroot_FOUND)
-  if(NOT MSVC OR win_broken_tests)
-    ROOTTEST_ADD_TEST(numba
-                      MACRO PyROOT_numbatests.py
-                      ENVIRONMENT LEGACY_PYROOT=${legacy_pyroot})
-    file(COPY vec_lv.root DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  if(NOT (DEFINED ENV{ROOTTEST_IGNORE_NUMBA_PY3} AND PYTHON_VERSION_MAJOR_Development_Main EQUAL 3))
+    if(NOT MSVC OR win_broken_tests)
+      ROOTTEST_ADD_TEST(numba
+                        MACRO PyROOT_numbatests.py
+                        ENVIRONMENT LEGACY_PYROOT=${legacy_pyroot})
+      file(COPY vec_lv.root DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+    endif()
   endif()
 endif()
