--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -161,7 +161,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Binaries ${{ matrix.platform }} ${{ matrix.arch }} ${{ matrix.config }}
-          path: /Users/sftnight/ROOT-CI/root_v*
+          path: /Users/sftnight/ROOT-CI/packages/root_v*
           if-no-files-found: error
 
 
@@ -267,7 +267,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Binaries ${{ matrix.target_arch }} ${{ matrix.config }}
-          path: C:/ROOT-CI/root_v*
+          path: C:/ROOT-CI/packages/root_v*
           if-no-files-found: error
 
 
@@ -437,7 +437,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Binaries ${{ matrix.image }} ${{ matrix.config }}
-          path: /github/home/ROOT-CI/ROOT-CI/root_v*
+          path: /github/home/ROOT-CI/packages/root_v*
           if-no-files-found: error
 
   event_file:
